# FlightConnector-Rust

./: .eslintrc.json  .gitignore  .ignore  README.md  eslint.config.mjs  index.html  jest.config.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts  vitest.config.mts  vitest.config.ts  wrong
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: deploy-docs.yml  deploy.yml  deploy_and_release.yml  pr_checks.yml
.storybook/: main.ts  preview.ts
connector-docs/: book.toml
connector-docs/src/: SUMMARY.md  ch01-00-introduction.md  ch01-01-installation.md  ch01-02-getting-started.md  ch02-00-bundles.md  ch03-00-inputs.md  ch03-01-outputs.md  ch04-00-presets.md  ch05-00-calibration.md  ch05-00-settings.md  ch05-01-logs.md  ch06-00-events.md  ch06-00-wasm.md  ch06-01-custom-events.md  ch06-01-outputlist.md  ch07-00-library.md  ch07-00-wasm.md  ch07-01-library-generator.md  ch07-03-library-inputs-with-value.md  ch07-04-library-outputs.md  ch10-01-01-outputs.md  ch10-01-events.md  ch10-01-output.md  ch11-00-flightcompanion.md
crates/: README.md
crates/connector/src-tauri/: Cargo.toml  tauri.conf.json
crates/connector/src-tauri/capabilities/: logWindows.json  testWindow.json
crates/connector/src-tauri/connector_library/: BitsAndDroidsFlightConnector.cpp  BitsAndDroidsFlightConnector.h  RadioFrequencies.h  UserSettings.h  examples  library.properties
crates/connector/src-tauri/resources/: exe.xml
crates/connector/src-tauri/src/: events.rs  main.rs  utils.rs
crates/connector/src-tauri/src/events/: action.rs  action_registry.rs  input_registry.rs  output_registry.rs  outputs.json  wasm_registry.rs
crates/connector/src-tauri/src/settings/: connector_settings.rs  settings_actions.rs
crates/connector/src-tauri/src/sim_utils/: input_converters.rs
crates/connector/src-tauri/src/simconnect_mod/: output_formatter.rs  simconnect_handler.rs  wasm.rs
crates/connector/src-tauri/src/utils/: library_handler.rs  semver_matcher.rs  store.rs  wasm_installer.rs
crates/connector_workspace/: Cargo.toml
crates/file_parsers/: Cargo.toml
crates/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
crates/src-tauri/capabilities/: logWindows.json  main.json  settingsWindow.json
crates/src-tauri/connector_library/: BitsAndDroidsFlightConnector.cpp  BitsAndDroidsFlightConnector.h
crates/src-tauri/icons/: icon.icns
crates/src-tauri/permissions/: base.json
crates/src-tauri/src/: events.rs  main.rs  sim_utils.rs  simconnect_mod.rs  utils.rs
crates/src-tauri/src/events/: action.rs  action_registry.rs  actions.rs  bundle_registry.rs  input_registry.rs  inputs.json  mod.rs  output_registry.rs  outputs.json  wasm_registry.rs
crates/src-tauri/src/events/registries/: action_registry.rs  commands.rs  mod.rs  wasm_registry.rs
crates/src-tauri/src/serial/: commands.rs  mod.rs  serial.rs  serial_operations.rs
crates/src-tauri/src/settings/: actions.rs  connector.rs  connector_settings.rs  mod.rs  settings_actions.rs
crates/src-tauri/src/sim_connection/: output_formatter_tests.rs  simconnect_handler.rs  wasm.rs
crates/src-tauri/src/sim_utils/: input_converters.rs  output_converters.rs  output_converters_tests.rs
crates/src-tauri/src/simconnect_mod/: mod.rs  output_formatter.rs  output_formatter_tests.rs  simconnect_definition_tests.rs  simconnect_definitions.rs  simconnect_handler.rs  simconnector.rs  wasm.rs
crates/src-tauri/src/utils/: library_handler.rs  wasm_installer.rs
crates/src-tauri/wasm_module/: manifest.json
crates/src-tauri/wasm_module/modules/: WASM_Module_BitsAndDroids.wasm  events.txt  wasm_events.json
crates/types/: cargo.toml
frontend/: main.test.tsx  main.tsx
frontend/components/: ControllerSelect.stories.tsx  ControllerSelect.tsx  ControllerSelectComponent.stories.tsx  ControllerSelectComponent.test.tsx  ControllerSelectComponent.tsx  InfoWindow.stories.tsx  InfoWindow.tsx  InputDialog.test.tsx  RunComponent.stories.tsx  RunComponent.tsx  UpdateWindow.test.tsx  UpdateWindow.tsx
frontend/context/: RunStateContext.tsx
frontend/info_blocks/: BundleInfo.test.tsx  BundleInfo.tsx
frontend/mocks/: MockBundle.ts  MockEventError.ts  MockWasmEvent.ts  PluginStoreMock.ts  TauriCore.mock.ts  handlers.ts
frontend/model/: Bundle.ts  Category.ts  Output.ts  Preset.ts  RunBundle.ts  SelectOption.ts
frontend/pages/: HomePage.stories.tsx  HomePage.test.tsx  HomePage.tsx  MenuLayout.tsx  globals.css
frontend/partner_devices/: PartnerDevices.ts
frontend/tests/: testUtils.ts
frontend/utils/: BundleSettingsHandler.ts  CustomEventHandler.test.ts  CustomEventHandler.ts  PresetSettingsHandler.ts  TrackedDevicesHandler.ts  UpdateChecker.test.ts  UpdateChecker.ts  connectorSettingsHandler.ts  runSettingsHandler.ts
src/: main.tsx
src-tauri/: Cargo.toml  Output.ts  tauri.conf.json
src-tauri/src/: events.rs  main.rs
src-tauri/src/events/: Output.rs  bundle.rs  bundle_registry.rs  category.rs  input.rs  input_parser.rs  input_registry.rs  inputs.json  mod.rs  output.rs  output_parser.rs  output_parser_tests.rs  output_registry.rs  outputs.json  run_bundle.rs  run_bundles.rs  sim_command.rs
src-tauri/src/simconnect_mod/: event_registry.rs  input_registry.rs  mod.rs  output_registry.rs  simconnect_handler.rs
src-tauri/src/user_settings/: mod.rs  settings_handler.rs
src/app/: HomePage.test.tsx  HomePage.tsx  MenuLayout.test.tsx  MenuLayout.tsx  globals.css  layout.tsx  page.tsx
src/components/: CategoryCheckboxes.tsx  ControllerSelect.test.tsx  ControllerSelect.tsx  ControllerSelectComponent.test.tsx  ControllerSelectComponent.tsx  FileDialog.stories.tsx  FileDialog.tsx  InfoWindow.test.tsx  InfoWindow.tsx  InputDialog.stories.tsx  InputDialog.tsx  OutputSelectRow.tsx  RunComponent.test.tsx  RunComponent.tsx  TabFolders.tsx  TabHeader.tsx  UpdateWindow.tsx
src/info_blocks/: BundleInfo.tsx
src/mocks/: MockInputErrorState.ts  MockWasmEvent.ts  (+3 more)
(+270 files in other folders)
