[package]
name = "connector_rust"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serialport = "4.2.2"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
smol = "1.2.0"
tokio-util = { version = "0.7.10", features = ["compat"] }
time = { version = "0.3.30", features = [] }
simconnect = "0.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
