[package]
name = "bits-and-droids-connector"
version = "0.1.0"
description = "Bits and droids connector"
authors = ["Bits and Droids"]
license = "MIT"
repository = ""
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
file_parsers = { path = "../file_parsers/" }
connector_types = { path = "../types/" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-localhost = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri = { version = "1.5.4", features = [
  "updater",
  "window-minimize",
  "window-unminimize",
  "window-hide",
  "window-close",
  "window-unmaximize",
  "window-start-dragging",
  "window-show",
  "window-maximize",
  "fs-all",
  "shell-open",
] }
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serialport = "4.2.2"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
smol = "2.0.0"
tokio-util = { version = "0.7.10", features = ["compat"] }
time = { version = "0.3.30", features = [] }
lazy_static = "1.4.0"
[target.'cfg(windows)'.dependencies]
window-shadows = "0.2.2"
simconnect = { git = "https://github.com/BitsAndDroids/simconnect-rust.git", branch = "debug_struct" }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "bits-and-droids-connector"
path = "src/main.rs"
