[package]
name = "bits-and-droids-connector"
version = "0.2.0"
description = "Bits and droids connector"
authors = ["Bits and Droids"]
license = "MIT"
repository = ""
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
log = "^0.4"
file_parsers = { path = "../file_parsers/" }
connector_types = { path = "../types/" }
tauri-plugin-updater = { version = "2.0.0-beta", features = ["rustls-tls"] }
tauri-plugin-process = "2.0.0-beta"
tauri-plugin-store = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta"
tauri-plugin-localhost = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri = { version = "2.0.0-beta", features = [] }
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serialport = "4.3.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
smol = "2.0.0"
tokio-util = { version = "0.7.10", features = ["compat"] }
time = { version = "0.3.30", features = [] }
lazy_static = "1.4.0"
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-dialog = "2.0.0-beta.4"
[target.'cfg(windows)'.dependencies]
simconnect = { git = "https://github.com/BitsAndDroids/simconnect-rust.git", branch = "ga-fix" }
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "bits-and-droids-connector"
path = "src/main.rs"
